network-manager-applet (1.4.2-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Tue, 04 Oct 2016 16:49:55 +0200

network-manager-applet (1.4.0-2) unstable; urgency=medium

  * Replace Depends: dbus-x11 with Depends: default-dbus-session-bus |
    dbus-session-bus so that either dbus-user-session or dbus-x11 can be used.
    (Closes: #836037)

 -- Michael Biebl <biebl@debian.org>  Tue, 30 Aug 2016 12:59:12 +0200

network-manager-applet (1.4.0-1) unstable; urgency=medium

  * New upstream release.
  * Rebase patches.
  * Bump network-manager related (build-)dependencies to >= 1.4.
  * Enable team and team-port configuration support. Requires Jansson for
    handling JSON data.

 -- Michael Biebl <biebl@debian.org>  Fri, 26 Aug 2016 16:45:48 +0200

network-manager-applet (1.2.4-1) unstable; urgency=medium

  * New upstream release.
  * Rebase patches.

 -- Michael Biebl <biebl@debian.org>  Thu, 04 Aug 2016 08:12:19 +0200

network-manager-applet (1.2.2-2) unstable; urgency=medium

  * Team upload.
  * debian/control:
    - Drop gnome-icon-theme dependency, this icon theme is deprecated
    - Switch from polkit-1-auth-agent to 'policykit-1-gnome |
      polkit-1-auth-agent', polkit-1-auth-agent is a virtual package

 -- Laurent Bigonville <bigon@debian.org>  Sun, 05 Jun 2016 13:23:10 +0200

network-manager-applet (1.2.2-1) unstable; urgency=medium

  * New upstream release.
  * Rebase patches.
  * Bump Standards-Versiont to 3.9.8.
  * Bump network-manager related (build-)dependencies to >= 1.2.

 -- Michael Biebl <biebl@debian.org>  Wed, 11 May 2016 18:33:00 +0200

network-manager-applet (1.2.0-2) unstable; urgency=medium

  * Stop using -X for dh_install. Some files were not installed by accident
    because of that. Instead explicity remove .a and .la files and use
    --fail-missing while at it.

 -- Michael Biebl <biebl@debian.org>  Tue, 26 Apr 2016 16:42:05 +0200
