@@ -21,8 +21,3 @@ override_dh_install:
 	find debian/tmp -name '*.a' -delete
 	find debian/tmp -name '*.la' -delete
 	dh_install --fail-missing
-
-override_dh_auto_test:
-ifeq (, $(filter nocheck, $(DEB_BUILD_OPTIONS)))
-	make check || ( find . -name test-suite.log -exec cat {} \;; exit 1; )
-endif
